# puzzles

./: .gitignore  letterpress.py  letterpress_2.py
causes/: network.list  word_friends.py
euler/: prob001.py  prob001.rs  prob002.py  prob003.py  prob004.py  prob005.py  prob006.py  prob007.py  prob008.py  prob009.py  prob010.py  prob011.py  prob012.py  prob013.py  prob014.py  prob015.py  prob017.py  prob018.py  prob019.py  prob020.py  prob021.py  prob022.py  prob023.py  prob024.py  prob025.py  prob026.py  prob027.py  prob028.py  prob029.py  prob030.py  prob031.py  prob032.py  prob033.py  prob034.py  prob035.py  prob036.py  prob037.py  prob038.py  prob039.py  prob040.py  (+70 more)
icfp/2006/python/: old_um.py
nlp-challenge/: p1.txt  test_rot_18.txt
puzzles/causes/: word_friends.py
puzzles/ita/bitvector-genealogy/: README.rst  bitvectors.py
puzzles/nlp-challenge/: hard.txt  solve.py
synacor/: Cargo.toml  README.md  adventure.txt  arch-spec  pyproject.toml
synacor/src/: coins.py  lib.rs  main.rs  parser.rs  teleport.py  teleport.rs  vm.rs
